tests/errors/test-generic-error.sac
// This test asserts syntax errors are printed as `Error:`
// SAC_TEST|include common.mk
// SAC_TEST|SAC2C_FLAGS += -check tc -b 1:loc -printstart 1:loc
// SAC_TEST|CALL_SAC2C := $(SAC2C) $(SAC2C_FLAGS)
//
// SAC_TEST|all: <file-name>
// SAC_TEST|<tab>$(CALL_SAC2C) $< 2>&1 | grep -Pi "^Error:$$" | $(GREP_COMMAND_OUTPUT) "" 1

int main () {
  return 0;
}